--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -73,3 +73,8 @@
 .onboarding .step.complete {
   background-color: rgb(159, 224, 159);
 }
+
+.no-bio {
+  text-align: center;
+  font-size: 16px;
+}
