Show bots and admins in user index

--- a/app/views/users/index.haml
+++ b/app/views/users/index.haml
@@ -18,6 +18,8 @@
                 &nbsp;
                 - if user.super_admin
                   %i.fa.fa-shield
+                - if user.bot
+                  %i.fa.fa-certificate
               %td= user.email
     = paginate @users, theme: 'tb3'
 
