Add closure management and display

--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -1,4 +1,5 @@
 = link_to "View Escalation Requests", escalation_requests_path, class: "btn btn-info"
 = link_to "Manage Users", users_path, class: "btn btn-info"
+= link_to "Manage Closures", closures_path, class: "btn btn-info"
 = link_to "Update Day Color", edit_day_path, class: "btn btn-info"
 = link_to "Manage Integrations", integrations_path, class: "btn btn-primary"
