Fix rankables drag-sorting, closes #49

--- a/app/views/announcements/index.haml
+++ b/app/views/announcements/index.haml
@@ -19,7 +19,7 @@
             %th Announcement
             %th Poster
             %th Posted
-        %tbody
+        %tbody.rankable
           - @announcements.each do |announcement|
             = content_tag_for(:tr, announcement) do
               %td
