Add ADA compliance notice for TinyMCE, standardize TinyMCE usage, closes #58

--- a/app/views/departments/_form.haml
+++ b/app/views/departments/_form.haml
@@ -15,4 +15,6 @@
     = f.text_area :content, placeholder: "Content", rows: 10, class: "form-control tinymce"
 
   = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
-= tinymce
+
+:javascript
+  init_tiny();
