--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -12,4 +12,5 @@
     = f.text_area :bio, class: "form-control tinymce"
   = f.submit "Update", class: "btn btn-success pull-right"
 
-= tinymce
+:javascript
+  init_tiny();
