--- a/app/views/activities/_form.haml
+++ b/app/views/activities/_form.haml
@@ -15,4 +15,5 @@
     = f.text_area :content, placeholder: "Content", rows: 10, class: "form-control tinymce"
 
   = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
-= tinymce
+:javascript
+  init_tiny();
