--- a/app/views/courses/_form.haml
+++ b/app/views/courses/_form.haml
@@ -14,4 +14,5 @@
     = f.label :content
     = f.text_area :content, placeholder: "Content", rows: 10, class: "form-control tinymce"
   = f.submit "Save", class: "btn btn-success pull-right", id: "submit-button"
-= tinymce
+:javascript
+  init_tiny();
