--- a/app/views/escalation_requests/_form.haml
+++ b/app/views/escalation_requests/_form.haml
@@ -5,13 +5,13 @@
     = f.text_field :note, placeholder: "Briefly describe why you want frontpage visibility...", class: "form-control"
   .row
     .form-group.col-md-6
-      = f.label :start_date
+      = f.label :escalation_start_at, "Start Date"
       #datetimepicker_start.input-group.date
         = f.text_field("escalation_start_at", class: "form-control", placeholder: "Start frontpage visibilty date")
         %span.input-group-addon
           %i.fa.fa-calendar
     .form-group.col-md-6
-      = f.label :end_date
+      = f.label :escalation_end_at, "End Date"
       #datetimepicker_end.input-group.date
         = f.text_field("escalation_end_at", class: "form-control", placeholder: "End frontpage visibilty date")
         %span.input-group-addon
