Convert user content to markdown

--- a/app/assets/stylesheets/imports.scss
+++ b/app/assets/stylesheets/imports.scss
@@ -5,6 +5,7 @@
 
 @import "eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker";
 @import "fontawesome-iconpicker/dist/css/fontawesome-iconpicker";
+@import "simplemde/dist/simplemde.min";
 @import "bootstrap-sass/assets/stylesheets/bootstrap-sprockets";
 @import "bootstrap-sass/assets/stylesheets/bootstrap";
 @import "college_green/styles-red";
