--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -18,6 +18,7 @@ html, body {
   margin-top: 14px;
   margin-left: 2px;
   margin-right: 2px;
+  margin-bottom: 10px;
   font-size: 15px !important;
   flex: 0 100%;
 }
@@ -36,9 +37,31 @@ html, body {
   font-size: 18px;
   line-height: 2;
 }
-.footer .social li a {
-  color: rgba(255, 255, 255, 0.8);
+
+.footer-muted {
+  color: rgba(255, 255, 255, 0.8) !important;
   &:hover {
-    color: rgba(255, 255, 255, 1);
+    color: rgba(255, 255, 255, 1) !important;
   }
+}
+
+.footer .social li a {
+  @extend .footer-muted;
+}
+
+.goog-te-gadget {
+  @extend .footer-muted;
+}
+
+#google_translate_element {
+  margin-top: 4px;
+}
+
+.goog-te-gadget-simple {
+    border-left: 0px !important;
+    border-right: 0px !important;
+    border-top: 0px !important;
+    border-bottom: 0px !important;
+    border-radius: 25px;
+    height: 25px;
 }
