--- a/app/views/announcements/index.haml
+++ b/app/views/announcements/index.haml
@@ -29,7 +29,7 @@
                 - announceable = announcement.announceable
                 %td= link_to "#{announceable.send("name") || "a #{announceable.class.to_s.humanize}"}", announceable
               %td= link_to announcement.name.truncate(60), announcement
-              %td= strip_tags(announcement.content).truncate(50)
+              %td= truncate(strip_tags(announcement.markdown.blank? ? announcement.content : @markdown.render(announcement.markdown)), length: 50)
               %td= announcement.poster.name
               %td
                 = time_ago_in_words(announcement.created_at)
