--- a/app/views/announcements/_form.haml
+++ b/app/views/announcements/_form.haml
@@ -1,3 +1,4 @@
+= content_for :model_name, Announcement.name.underscore.to_sym
 = javascript_include_tag "markdown"
 
 = form_for @announcement do |f|
