--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -21,6 +21,9 @@
 = link_to edit_day_path, class: "btn btn-admin" do
   %i.fa.fa-calendar
   Update Day Color
+= link_to promotions_path, class: "btn btn-admin" do
+  %i.fa.fa-home
+  Manage Promotions
 = link_to integrations_path, class: "btn btn-admin" do
   %i.fa.fa-comment
   Manage Integrations
