--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -15,6 +15,9 @@
 = link_to users_path, class: "btn btn-admin" do
   %i.fa.fa-user
   Manage Users
+= link_to badges_path, class: "btn btn-admin" do
+  %i.fa.fa-shield
+  Manage Badges
 = link_to closures_path, class: "btn btn-admin" do
   %i.fa.fa-snowflake-o
   Manage Closures
