--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,4 @@
-= content_for :title, @user.name
+= content_for :title, "#{@user.name}#{@user.badge ? ", #{@user.badge.name}" : ""}"
 = content_for :description, strip_tags(@user.bio)
 = content_for :meta do
   %meta{name: 'og:type', content: 'profile'}
