"See all" -> "Click to see all"

--- a/app/views/welcome/landing/_quicklinks.haml
+++ b/app/views/welcome/landing/_quicklinks.haml
@@ -4,7 +4,7 @@
     %small
       = link_to links_path do
         %i.fa.fa-ellipsis-v
-        See all
+        Click to see all
   .panel-body
     %p
       %a{:href => "https://ic.syosset.k12.ny.us/"}
