--- a/app/views/announcements/index.haml
+++ b/app/views/announcements/index.haml
@@ -30,7 +30,10 @@
                 %td= link_to "#{announceable.send("name") || "a #{announceable.class.to_s.humanize}"}", announceable
               %td= link_to announcement.name.truncate(60), announcement
               %td= truncate(strip_tags(announcement.markdown.blank? ? announcement.content : @markdown.render(announcement.markdown)), length: 50)
-              %td= announcement.poster.name
+              %td
+                = link_to announcement.poster do
+                  = announcement.poster.name
+                  = render 'badges/badge', badge: announcement.poster.badge
               %td
                 = time_ago_in_words(announcement.created_at)
                 ago
