--- a/app/views/history_trackers/index.haml
+++ b/app/views/history_trackers/index.haml
@@ -13,7 +13,10 @@
         %td
           = time_ago_in_words(track.created_at)
           ago
-        %td= link_to track.modifier.name, track.modifier
+        %td
+          = link_to track.modifier do
+            = track.modifier.name
+            = render 'badges/badge', badge: track.modifier.badge
         %td= track.action
 = paginate @tracks, theme: 'tb3'
 = link_to 'Back',  @trackable, class: "btn btn-warning pull-right"
