--- a/app/views/welcome/_announcements.haml
+++ b/app/views/welcome/_announcements.haml
@@ -5,7 +5,7 @@
       %small
         = link_to announcements_path do
           %i.fa.fa-ellipsis-v
-          See all
+          Click to see all
   .carousel-controls
     %a.prev{"data-slide" => "prev", :href => "#news-carousel"}
       %i.fa.fa-caret-left
