--- a/app/views/welcome/_quicklinks.haml
+++ b/app/views/welcome/_quicklinks.haml
@@ -5,7 +5,7 @@
       %small
         = link_to links_path do
           %i.fa.fa-ellipsis-v
-          See all
+          Click to see all
   .section-content
     %p
       %a{:href => "https://ic.syosset.k12.ny.us/"}
