--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -6,6 +6,8 @@
   Edit
   =resource_name.to_s.humanize
 
+= errors_for(resource)
+
 = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
   = devise_error_messages!
   .form-group
