--- a/app/views/departments/show.haml
+++ b/app/views/departments/show.haml
@@ -45,7 +45,7 @@
             %small
               = link_to department_courses_path(@department) do
                 %i.fa.fa-ellipsis-v
-                See all
+                Click to see all
           %input.course-search.form-control{type: 'text', placeholder: 'Search courses'}
           %hr
           - @department.courses.in_groups_of(4).each_with_index do |courses, index|
@@ -78,7 +78,7 @@
             %small
               = link_to links_path(department_id: @department.id) do
                 %i.fa.fa-ellipsis-v
-                See all
+                Click to see all
           %ul.rankable.list-group
             - @department.links.by_priority.limit(5).each do |link|
               = content_tag_for(:li, link, class: "list-group-item") do
